# generative-modeling

./: .gitignore  README.md  pyproject.toml
src/generative_modeling/losses/: __init__.py  adversarial_loss.py  lpips_loss.py  perceptual_loss.py  pgan64_discriminator.py  sobel_loss.py  stargan_discriminator.py
src/generative_modeling/sequence/lstm/: __init__.py  model.py
src/generative_modeling/sequence/tokenizer/: __init__.py  bpe.py
src/generative_modeling/sequence/transformer/: model.py
src/generative_modeling/sequence/utils/: __init__.py  text_converter.py
src/generative_modeling/variational/: __init__.py  beta_vae.py  celeba_beta_vae.py  celeba_hierarchical_vae.py  celeba_vqvae.py  gmm.py  gmm_utils.py  vae_utils.py
src/scripts/: compare_model_sizes.py  preprocess_booksummaries.py  sample_booksummaries_lstm.py  sample_mnist_transformer.py  sanity_check_adversarial_loss.py  sanity_check_adversarial_loss_64.py  sanity_check_lpips.py  sanity_check_lpips_loss.py  sanity_check_perceptual_loss.py  sanity_check_sobel_loss.py  sanity_check_stargan.py  test_vqvae_shapes.py  train_booksummaries_bpe.py  train_booksummaries_lstm.py  train_celeba_beta_vae.py  train_celeba_hierarchical_vae.py  train_celeba_vqvae.py  train_mnist_bpe.py  train_mnist_transformer.py
src/scripts/variational/: generate_data.py  train_gmm_em.py  train_gmm_gradient.py  train_gmm_mcmc.py  train_mnist_beta_vae.py
