[project]
authors = [
    { name = "DamianHattler", email = "damian.hattler@web.de" },
    { name = "NicoStellwag", email = "nico.stellwag@gmail.com" },
]
dependencies = ["stargan-pytorch>=0.1.0,<0.2", "thop>=0.1.1.post2209072238,<0.2", "huggingface-hub>=1.3.2,<2"]
name = "generative-modeling"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "==3.12"
wandb = ">=0.23.1,<0.24"
gdown = ">=5.2.1,<6"

[tool.pixi.pypi-dependencies]
generative_modeling = { path = ".", editable = true }
torch = ">=2.8.0, <3"
torchvision = ">=0.23.0, <0.24"
torchaudio = ">=2.8.0, <3"
numpy = ">=2.3.3, <3"
tqdm = ">=4.67.1, <5"
matplotlib = ">=3.10.7, <4"
mlflow = ">=3.4.0, <4"
facenet-pytorch = ">=2.5.3, <3"
lpips = ">=0.1.4, <0.2"

[tool.pixi.tasks]
